--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   just_audio: ^0.9.36
   audio_video_progress_bar: ^2.0.1
   rxdart: ^0.27.7
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
