--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   audio_video_progress_bar: ^2.0.1
   rxdart: ^0.27.7
   provider: ^6.1.2
-
+  file_picker: ^9.0.0
+  permission_handler: ^11.4.0
+  shared_preferences: ^2.5.2
+  audio_service: ^0.18.17
 dev_dependencies:
   flutter_test:
     sdk: flutter
