--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   file_picker: ^9.0.0
   permission_handler: ^11.4.0
   shared_preferences: ^2.5.2
-  audio_service: ^0.18.17
+  just_audio_background: ^0.0.1-beta.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
