--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   permission_handler: ^11.4.0
   shared_preferences: ^2.5.2
   just_audio_background: ^0.0.1-beta.15
+  audio_metadata_reader: ^1.1.0
+  google_fonts: ^6.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
